--- a/package.json
+++ b/package.json
@@ -9,11 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.4.2",
+    "@reduxjs/toolkit": "^2.2.4",
     "axios": "^1.6.8",
+    "clsx": "^2.1.1",
+    "formik": "^2.4.6",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "swiper": "^11.1.1"
+    "react-redux": "^9.1.2",
+    "redux-persist": "^6.0.0",
+    "swiper": "^11.1.1",
+    "tailwind-merge": "^2.3.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
