--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.1.2",
     "redux-persist": "^6.0.0",
     "swiper": "^11.1.1",
