--- a/package.json
+++ b/package.json
@@ -15,17 +15,20 @@
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
     "gsap": "^3.12.5",
+    "js-cookie": "^3.0.5",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.1.2",
     "redux-persist": "^6.0.0",
+    "sharp": "^0.33.4",
     "swiper": "^11.1.1",
     "tailwind-merge": "^2.3.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
