--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gsap": "^3.12.5",
     "js-cookie": "^3.0.5",
     "next": "14.2.3",
+    "prettier": "^3.3.3",
     "react": "^18",
     "react-dom": "^18",
     "react-loader-spinner": "^6.1.6",
